SERVER-103191 Resharding coordinator handles missing state doc (#34396)

GitOrigin-RevId: 86ec6463a54674d342bd5469044a035431d6bf40